2009-01-22  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp:
	(CppInterpreter::native_entry): Correctly handle asynchronous
	exceptions during post-call thread state transition.

2009-01-22  Omair Majid  <omajid@redhat.com>
	    Ioana Ivan <iivan@redhat.com>
			
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioClip.java
	(start): Return silently if already started.
	(stop): Return silently if already stopped.

2009-01-22  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Use
	Hashtable to store classloaders, instead of HashMap (values cannot be
	null in HashTable).
	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Catch CFE in
	addition to CNFE.

2009-01-22  Andrew Haley  <aph@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stack_zero.hpp (class
	ZeroFrame::FrameType): Set ENTRY_FRAME = 0xCAFEBABE.

	* ports/hotspot/src/share/vm/shark/shark_globals.hpp (SHARK_FLAGS):
	Add SharkPrintAsmOf.

	* ports/hotspot/src/share/vm/shark/sharkFunction.hpp: Add comment.

	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::initialize): Set builder()->sharkEntry.
	Use fnmatch() instead of strcmp().
	Generate debugging dumps.
	* ports/hotspot/src/share/vm/shark/sharkEntry.hpp
	(SharkEntry::code_start, code_limit): Rewrite.
	(SharkEntry::setBounds): New.

	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(SharkBuilder::pointer_constant): New function.
	* ports/hotspot/src/share/vm/shark/sharkBytecodeTracer.cpp
	(SharkBytecodeTracer::decode_one_word):
	use SharkBuilder::pointer_constant.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::sharkEntry): New.
	(SharkBuilder::CreateUnimplemented): use SharkBuilder::pointer_constant.
	(SharkBuilder::CreateShouldNotReachHere): Likewise.
	(MyJITMemoryManager::endFunctionBody): New method.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp